--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -13,14 +13,14 @@ RUN apt-get update && \
 RUN curl -L https://github.com/docker/compose/releases/download/1.25.5/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose && \
     chmod +x /usr/local/bin/docker-compose
 
-COPY ./Dockerfile.sh /usr/local/bin/
+COPY ./cmd.sh /usr/local/bin/
 COPY Pipfile* /root/
 WORKDIR /root
 
 RUN pipenv install --system \
     && sed -i 's|/bin/sh|/bin/bash|g' /usr/local/lib/python3.8/site-packages/testinfra/backend/docker.py
 
-RUN echo "set -ex && Dockerfile.sh && \$@" > /usr/local/bin/entrypoint.sh
+RUN echo "set -ex && cmd.sh && \$@" > /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
 ENTRYPOINT entrypoint.sh
-CMD Dockerfile.sh
+CMD cmd.sh
